<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_ratecheck</name>
  <version>0.0.0</version>
  <description>The rosneuro rate check package</description>

  <author email="jacopo.silvestrin@unipd.it">Jacopo Silvestrin</author>
  <maintainer email="jacopo.silvestrin@unipd.it">Jacopo Silvestrin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>
  <depend>topic_tools</depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
